--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "keywords": ["chiron","framework","view","template","twig","html","renderer", "bridge"],
   "license": "MIT",
   "require": {
-    "php": "^7.1",
+    "php": "^8.0|^8.1",
     "chiron/views": "^1.0",
     "twig/twig": "^3.0"
   },
@@ -18,14 +18,15 @@
       "psr-4": { "Chiron\\Twig\\Tests\\" : "tests/" }
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.0",
-    "phpstan/phpstan": "^0.12.0",
+    "phpunit/phpunit": "^9.5",
+    "phpstan/phpstan": "^0.12",
+    "phpstan/phpstan-phpunit": "^0.12",
+    "chiron/coding-standard": "^3.0",
     "chiron/chiron": "^3.9",
     "chiron/fastroute-bridge": "^1.0",
     "chiron/container": "^3.5",
     "chiron/console": "^0.9",
-    "chiron/coding-standard": "^3.0",
-    "nyholm/psr7": "^1.1"
+    "nyholm/psr7": "^1.4"
   },
   "scripts": {
     "phpunit": "phpunit --colors=always",
